www/css/style.css
/*
  Allow angular.js to be loaded in body, hiding cloaked elements until
  templates compile.
 */
[ng\:cloak], [ng-cloak], .ng-cloak {
  display: none !important;
}
.ng-hide-add, .ng-hide-remove {
  display: none !important;
}

/*
  Declare Apple's SF fonts and set it as font-famly for all elements
*/
@font-face {
  font-family: "San Francisco";
  src: url("../fonts/SF-UI-Text-Regular.otf");
}
@font-face {
  font-family: "San Francisco";
  src: url("../fonts/SF-UI-Text-Bold.otf");
  font-weight: bold;
}
@font-face {
  font-family: "San Francisco";
  src: url("../fonts/SF-UI-Text-BoldOblique.otf");
  font-weight: bold;
  font-style: italic;
}

* {
  font-family: 'San Francisco' !important;
}

p, div, span {
  font-size: 15px;
}

.home {
  background-color: #e15726;
}

.home-text-logo {
  padding-top: 200px;
}

.home-text-logo, .home-text-buttons  {
  text-align: center;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: center;
}

.home-text-logo img {
  width: 75%;
}

.onboarding-slider {
  height: 100%;
}

.onboarding-slider img {
  display: block;
  margin: 0 auto;
  width: auto;
  height : auto;
  max-height: 100%;
  max-width: 100%;
}

.row-67 {
  width: 100%;
  height: 67%;
}

.row-33 {
  width: 100%;
  height: 33%;
}

.row-50 {
  width: 100%;
  height: 50%;
}

.onboarding-slider .row-33 {
  text-align: center;
  padding: 20px;
}

.onboarding-slider .row-33 h2, .sharing-description h2 {
  color: #e15726;
  font-size: 20px;
}

.onboarding-slider .row-33 p, .sharing-description p {
  color: rgb(173,178,187);
  font-size: 20px;
}

.sharing-description {
  text-align: center;
}

.sharing-slide {
  background-color: #FFFDD0;
  display: flex;
  align-items: center;
  flex-flow: column wrap;
  justify-content: center;
  padding: 20px;
}

.sharing-image {
  height: 60%;
  width: auto;
  display: block;
  margin: 0 auto;
}

.slider-pager .slider-pager-page.active {
  color: #E15726;
}

.slider-pager .slider-pager-page {
  color: #ADB2BB;
}

/* general UI changes */

.button-icon .icon:before, .button-icon.icon:before {
  font-size: 24px
}

.item-button-right > .button, .item-button-right .item-content > .button, .item-button-right > .buttons, .item-button-right .item-content > .buttons {
  width: 20px;
  border-width: 0;
  top: 0px;
  right: 0px;
}

.item-complex .item-content, .item-radio .item-content {
  padding: 6px 10px
}
.item.item-icon-left.item-complex {
  padding: 0;
}

.item.item-radio i.radio-icon {
  min-width: 34px;
}

.item-divider {
  font-weight: bold;
  text-align: center;
}

.item-divider, .item p {
  color: rgb(173, 178, 187);
}

.item.item-divider {
  padding: 5px;
  font-size: 12px;
}

.item.item-divider.eta {
  border: none;
}

.item {
  padding: 10px;
}

.item.item-complex {
  padding: 0;
}

.item.item-complex .item-content {
  height: 100%;
}

.item.item-icon-left {
  padding: 10px 10px 10px 54px;
}

.item-options .button {
  font-size: 12px;
}

.item-fixed {
  height: 43px;
}

.item.item-fixed h2, .item.item-fixed p {
  padding: 0px;
  margin: 0px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.item-fixed h2 {
  font-size: 12px;
}

.item-fixed p {
  font-size: 10px;
}

.item-radio i.radio-icon  {
  padding: 0 6px;
}

.item-radio i.radio-icon::before  {
  line-height: 41px;
}

.button-icon .icon:before, .button-icon.icon:before {
  line-height: 41px;
  margin: 0px;
}

.item-input button:nth-of-type(1) {
  float: left;
  left: 0;
  top: 0;
  position: absolute;
}

.item-label-center {
  width: 100%;
  text-align: center;
}

.order-quantity {
  border-top: none;
}

.item-input button:nth-of-type(2) {
  float: right;
  right: 0;
  top: 0;
  position: absolute;
}

.item p {
  white-space: normal;
}

.item.item-image {
  /* padding: 10px 0 10px 0; */
  padding: 0;
}

.item.item-thumbnail-left {
  padding-top: 8px;
  padding-left: 106px;
}

.item-image img {
  border-radius: 2px;
}

.item.item-description {
  border-top: none;
}

.item.item-description h2 {
  white-space: normal;
}

.item-radio input:checked ~ i.radio-icon {
  color: rgb(25, 204, 203)
}

.checkbox input:checked:before, .checkbox input:checked + .checkbox-icon:before {
  background: #19CCCB;
  border-color: #19CCCB;
  opacity: 1;
}
.checkbox input:checked:after, input:checked + .checkbox-icon:after {
  border: 1px solid #fff;
  border-top: 0;
  border-right: 0;
  opacity: 1;
}

.checkbox input:after, .checkbox-icon:after {
  border: 1px solid #444;
  border-top: 0;
  border-right: 0;
  opacity: 0.4;
}

.checkbox input:before, .checkbox .checkbox-icon:before {
  border-color: #444;
  opacity: 0.4;
}

.item-radio input:checked ~ .item-content {
  background-color: #fff;
}

.item-radio i.radio-icon.button-opaque {
  visibility: visible;
  opacity: 0.4
}

.ion-ios-trash-outline.button-icon {
  color: #e15726;
}

.modal {
  border-radius: 5px;
}

.modal .bar-header {
  border-radius: 5px;
}

.modal .bar-header > button:last-child {
  color: #e15726;
}

.modal .title {
  color: #e15726;
}

.icon > img:first-child {
  height: 80%;
}

.item .icon-image {
  left: 0;
  margin: 0 0 0 6px;
}

.button-icon img {
  height: 100%;
}

.title-image {
  margin-top: 10px;
  height: 27px;
}

.button.button-light {
  color: #e15726;
}

.home-text-buttons button {
  margin: 10px auto;
  text-align: center;
  display: block;
  border-radius: 25px;
  width: 80%;
}

.button.button-light.button-clear {
  border: 2px solid #FFF;
  color: #FFF;
}

.home-text-buttons .button.button-light,
.home-textbuttons .button.button-light-button-clear {
  transition: 500ms ease all;
}

.button.button-light:hover {
  color: #e15726;
}

.button.button-light.button-clear:hover {
  color: #fff;
}

.home-text-buttons .button.button-light.button-clear:active {
  width: 70%;
  opacity: 1;
  background-color: #FFF;
  color: #e15726;
}

.home-text-buttons .button.button-light:active {
  width: 70%;
  opacity: 1;
  border: 2px solid #FFF;
  color: #FFF;
  background-color: #e15726;
}

.settings, .order, .modal {
  background-color: #F5F5F5;
}

.settings-promotions .item-icon-left {
  /* border-top: none; */
}

input.reset-field {
  padding-right: 20px;
}

.reset-field-icon {
  position: absolute;
  right: 6px;
  margin: 0px;
  font-size: 20px;
  top: 12px;
}

.item-fixed .reset-field-icon {
  top: 7px;
}

.button.button-block {
  margin-top: 0;
  margin-bottom: 0;
}

.item-feedback .input-description {
  color: rgb(173, 178, 187);
}

.item-feedback .input-data {
  float: right;
  text-align: right;
  max-width: 60%;
}

.feedback-buttons {
  width: 100%;
  display: flex;
}

.feedback-buttons button {
  width: 50%;
  position:relative;
  font-size: 12px;
}

.feedback-buttons button:first-child {
  border-right: none;
}

.feedback-buttons button:last-child {
  float: right;
}

.button.button-light.positive {
  color: #30C83E;
}

.button.button-light.selected {
  border-color: #CCC;
  background-color: #FAFAFA;
  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.1);
}

.checkbox input {
  float: right;
}

.bar-footer .title {
  color: #30C83E;
}

.pac-container, .pac-item {
  min-height: 50px !important;
}

.list {
  margin-bottom: 0;
}

textarea {
  resize: none;
}

.modal.address-modal {
  height: 212px;
}

.modal.card-modal {
  height: 296px;
}

